--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Органайзер</string>
+    <string name="app_name">Помощник по жизни</string>
     <string name="action_settings">Settings</string>
 
     <string name="first">Заметка</string>
